--- a/GoodPlant/carrito.html
+++ b/GoodPlant/carrito.html
@@ -42,7 +42,7 @@
           <a class="nav-link" href="productos.html">Productos</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="descuentos.html">Codigos de descuento</a>
+          <a class="nav-link" href="carrito.html">Carrito de compras</a>
         </li>
         <li class="nav-item">
             <a class="nav-link" href="#" data-toggle="modal" data-target="#ModalFundacion">Unete a la Fundacion</a>
@@ -58,82 +58,65 @@
           <div class="col-sm-2">
             </div>
             <div class="col-sm-8 flex-column mt-3 text-center">
-                <div class="row">
-                  <div class="col-sm-4 mt-3 mb-3">
-                    <div class="card" style="width:200px">
-                      <img class="card-img-top" src="img/Porcentaje.jpg" alt="Card image">
+              <h2 style="color: white;">Carrito de compras</h2>
+              <p style="color: white;">Puedes revisar tur productos seleccionados antes de pagarlos aqui</p>            
+                    <table class="table table-bordered bg-light">
+                      <thead>
+                        <tr>
+                          <th>Nombre de Producto</th>
+                          <th>Cantidad</th>
+                          <th>Descuento</th>
+                          <th>Total Producto(s)</th>
+                        </tr>
+                      </thead>
+                      <tbody>
+                        <tr>
+                          <td>Maceta Good</td>
+                          <td>2</td>
+                          <td>Si aplica</td>
+                          <td>$15.200</td>
+                        </tr>
+                        <tr>
+                          <td>Tierra de hojas</td>
+                          <td>1</td>
+                          <td>Si aplica</td>
+                          <td>$7.600</td>
+                        </tr>
+                        <tr>
+                          <td>Pala de jardin</td>
+                          <td>1</td>
+                          <td>Si aplica</td>
+                          <td>$9.500</td>
+                        </tr>
+                      </tbody>
+                    </table>
+                    <div class="card" style="width:300px">
                       <div class="card-body">
-                        <h4 class="card-title">Codigo Descuento</h4>
-                        <p class="card-text">5 %</p>
-                        <a href="#" class="btn btn-primary">Canjear</a>
-                        <a href="#" class="btn btn-primary mt-3">Regalar</a>
+                        <h4 class="card-title">Total de la compra</h4>
+                        <p class="card-text">Total Neto: $34.000</p>
+                        <p class="card-text">Descuento: $1.500</p>
+                        <p class="card-text">Total a pagar: $32.300</p>
+                        <div class="payMethod mb-3 mt-3">
+                          <h6>Metodos de pago:</h6>
+                          <div class="dropdown">
+                            <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                              Seleccione...
+                            </button>
+                            <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                              <a class="dropdown-item" href="#">Paypal</a>
+                              <a class="dropdown-item" href="#">WebPay</a>
+                              <a class="dropdown-item" href="#">Targeta Registrada</a>
+                            </div>
+                          </div>
+                        </div>
+                        <a href="#" class="btn btn-primary">Ir a pagar</a>
                       </div>
                     </div>
-                  </div>
-                  <div class="col-sm-4 mt-3 mb-3">
-                    <div class="card" style="width:200px">
-                      <img class="card-img-top" src="img/Porcentaje.jpg" alt="Card image">
-                      <div class="card-body">
-                        <h4 class="card-title">Codigo Descuento</h4>
-                        <p class="card-text">10 %</p>
-                        <a href="#" class="btn btn-primary">Canjear</a>
-                        <a href="#" class="btn btn-primary mt-3">Regalar</a>
-                      </div>
                     </div>
-                  </div>
-                  <div class="col-sm-4 mt-3 mb-3">
-                    <div class="card" style="width:200px">
-                      <img class="card-img-top" src="img/Porcentaje.jpg" alt="Card image">
-                      <div class="card-body">
-                        <h5 class="card-title">Codigo Descuento</h5>
-                        <p class="card-text">20 %</p>
-                        <a href="#" class="btn btn-primary">Canjear</a>
-                        <a href="#" class="btn btn-primary mt-3">Regalar</a>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-                <div class="row">
-                  <div class="col-sm-4 mt-3 mb-3">
-                    <div class="card" style="width:200px">
-                      <img class="card-img-top" src="img/Porcentaje.jpg" alt="Card image">
-                      <div class="card-body">
-                        <h4 class="card-title">Codigo Descuento</h4>
-                        <p class="card-text">30 %</p>
-                        <a href="#" class="btn btn-primary">Canjear</a>
-                        <a href="#" class="btn btn-primary mt-3">Regalar</a>
-                      </div>
-                    </div>
-                  </div>
-                  <div class="col-sm-4 mt-3 mb-3">
-                    <div class="card" style="width:200px">
-                      <img class="card-img-top" src="img/Porcentaje.jpg" alt="Card image">
-                      <div class="card-body">
-                        <h4 class="card-title">Codigo Descuento</h4>
-                        <p class="card-text">40 %</p>
-                        <a href="#" class="btn btn-primary">Canjear</a>
-                        <a href="#" class="btn btn-primary mt-3">Regalar</a>
-                      </div>
-                    </div>
-                  </div>
-                  <div class="col-sm-4 mt-3 mb-3">
-                    <div class="card" style="width:200px">
-                      <img class="card-img-top" src="img/Porcentaje.jpg" alt="Card image">
-                      <div class="card-body">
-                        <h4 class="card-title">Codigo Descuento</h4>
-                        <p class="card-text">50 %</p>
-                        <a href="#" class="btn btn-primary">Canjear</a>
-                        <a href="#" class="btn btn-primary mt-3">Regalar</a>
-                      </div>
-                    </div>
-                  </div>
-                </div>
               </div>
-              <p></p>
-            </div>
             <div class="col-sm-2">
             </div>
-        </div>
+          </div>
     </div>
   <!-- The Modal -->
   <div class="modal" id="ModalContacto2">
@@ -178,18 +161,10 @@
                 <form action="perfilUsuario.html" method="get">
               </div>
                     <div class="form-group">
-                        <label for="txtUser">Nombre</label>
+                        <label for="txtUser">Nombre Completo</label>
                         <input type="text" placeholder="Ingrese Nombre" class="form-control" name="txtName" id="txtName">
                     </div>
-                    <div>
-                      <label for="txtAppaterno">Apellido paterno</label>
-                      <input type="text" placeholder="Ingrese apellido paterno" class="form-control" name="txtAppaterno" id="txtAppaterno">
-                  </div>
-                  <div>
-                    <label for="txtApmaterno">Apellido materno</label>
-                    <input type="text" placeholder="Ingrese apellido materno" class="form-control" name="txtApmaterno" id="txtApmaterno">
-                </div>
-                    <div>
+                    <div class="txtEmail">
                         <label for="txtEmail">Correo Electronico</label>
                         <input type="text" placeholder="Ingresa tu correo" class="form-control" name="txtEmail" id="txtEmail">
                     </div>
@@ -197,6 +172,34 @@
                       <label for="txtNumcon">Numero Contacto</label>
                       <input type="text" placeholder="Ingrese numero contacto" class="form-control" name="txtNumcon" id="txtNumcon">
                   </div>
+                    <div class="tittlePlan mb-3 mt-3">
+                      <h6>Planes de Suscripcion:</h6>
+                  </div>
+                    <div class="checkbox mb-3">
+                      <label for="checkbox">Un mes por $4.000</label>
+                      <input type="checkbox">
+                  </div>
+                  <div class="checkbox mb-3">
+                    <label for="checkbox">6 meses por $20.000</label>
+                    <input type="checkbox">
+                </div>
+                  <div class="checkbox mb-3">
+                    <label for="checkbox">1 año por $30.000</label>
+                    <input type="checkbox">
+                </div>
+                <div class="payMethod mb-3 mt-3">
+                  <h6>Metodos de pago:</h6>
+                  <div class="dropdown">
+                    <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                      Seleccione...
+                    </button>
+                    <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                      <a class="dropdown-item" href="#">Paypal</a>
+                      <a class="dropdown-item" href="#">WebPay</a>
+                      <a class="dropdown-item" href="#">Targeta Registrada</a>
+                    </div>
+                  </div>
+                </div>
                     <div style="text-align: center;">
                         <input type="submit"  class="btn btn-success mt-3" name="btnEnviar" id="btnEnviar">
                         <input type="reset" class="btn btn-danger mt-3" name="btnLimpiar" id="btnLimpiar">
