--- a/GoodPlant/seguimientoDespacho2.html
+++ b/GoodPlant/seguimientoDespacho2.html
@@ -29,7 +29,7 @@
               <a class="nav-link" href="productos.html">Productos</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Codigos de descuento</a>
+              <a class="nav-link" href="carrito.html">Carrito de compras</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="#" data-toggle="modal" data-target="#ModalFundacion">Unete a la Fundacion</a>
@@ -51,25 +51,25 @@
                             <p>Bienvenido JBtesla</p>
                     </div>
                 </div>
-                <div class="row-menu">
+                <div class="row">
                     <div class="col-sm-12">
-                        <ul class="nav nav-pills flex-column mt-3">
-                            <li class="nav-item mt-1">
-                              <a class="nav-link " href="perfilUsuario.html"> <i class="fa fa-id-badge"></i> Perfil</a>
-                            </li>
-                            <li class="nav-item mt-1">
-                              <a class="nav-link" href="historialCompras.html"><i class="fa fa-clock-rotate-left"></i> Historial Compras</a>
-                            </li>
-                            <li class="nav-item mt-1">
-                              <a class="nav-link" href="despacho.html"><i class="fa fa-truck"></i> Seguimiento Despacho</a>
-                            </li>
-                            <li>
-                            <hr>
-                             </li>
-                            <li class="nav-item mt-1">
-                                <a class="nav-link" href="index.html"><i class="fa fa-right-from-bracket"></i> Cerrar Sesión</a>
-                              </li>
-                          </ul>
+                      <ul class="nav nav-pills flex-column mt-3">
+                        <li class="nav-item mt-1">
+                          <a class="nav-link " href="perfilUsuario.html"> <i class="fa fa-id-badge"></i> Perfil</a>
+                        </li>
+                        <li class="nav-item mt-1">
+                          <a class="nav-link" href="historialCompras.html"><i class="fa fa-clock-rotate-left"></i> Historial Compras</a>
+                        </li>
+                        <li class="nav-item mt-1">
+                            <a class="nav-link" href="suscripcion.html"><i class="fa-brands fa-gratipay"></i> suscripcion</a>
+                          </li>
+                        <li>
+                          <hr>
+                         </li>
+                        <li class="nav-item mt-1">
+                            <a class="nav-link" href="index.html"><i class="fa fa-right-from-bracket"></i> Cerrar Sesión</a>
+                          </li>
+                      </ul>
                     </div>
                     </div>
                 </div>
@@ -77,59 +77,68 @@
                 <div class="row">
                     <div class="col-sm-2">
                     </div>
-                    <div class="col-sm-12">
+                    <div class="col-sm-6">
                       <div class="titulo mt-3 mb-3 text-center">
                       <H1>Seguimiento de despacho</H1>
                     </div>
-                        <div class="row">
-                          <div class="col-sm-4">
+                        <div class="row justify-content-center">
+                          <div class="col-sm-3">
                           <img src="img/shoopingcart.png" alt="">
                           <img src="img/arrow.png" alt="">
                         </div>
-                        <div class="col-sm-4">
+                        <div class="col-sm-3">
                           <img src="img/truck.png" alt="">
                           <img src="img/arrow.png" alt="">
                         </div>
-                        <div class="col-sm-4">
+                        <div class="col-sm-3">
                           <img src="img/home.png" alt="">
                           <img src="img/success.png" alt="">
                         </div>
                       </div>
                       </div>
                     </div>
-                      <div class="progress">
-                        <div class="progress-bar" style="width:25%">25%</div>
+                    <div class="row">
+                      <div class="col-sm-2"></div>
+                      <div class="col-sm-6">
+                        <div class="progress">
+                          <div class="progress-bar" style="width:100%">100%</div>
+                        </div>
+                        <div class="mensagge mt-3">
+                          <h3>Tu pedido ah sido entregado en tu domicilio espero lo disfrutes</h3>
+                          <p>Fecha estimada de entrega jueves 3 de Marzo</p>
+                        </div>
                       </div>
-                      <div class="mensagge mt-3">
-                        <h3>Tu pedido esta siendo preparado por nuestra tienda</h3>
-                        <p>Fecha estimada de entrega el martes 5 de abril</p>
-                      </div>
-                      <table class="table table-striped">
-                        <thead>
+                      <div class="col-sm-2"></div>
+                    </div>
+                      <div class="row">
+                        <div class="col-sm-2"></div>
+                        <div class="col-sm-6">
+                          <h4>Detalles del envio</h4>
+                          <table class="table table-striped">
+                        <thead class="thead-dark">
                           <tr>
+                            <th>Numero de orden</th>
                             <th>Producto</th>
                             <th>Fecha de compra</th>
+                            <th>Fecha estimada Despacho</th>
                             <th>Precio</th>
+                            <th>Estado</th>
                           </tr>
                         </thead>
                         <tbody>
-                          <tr>
-                            <td>Pala de jardin</td>
-                            <td>23/02/2022</td>
-                            <td>$8.000</td>
-                          </tr>
-                          <tr>
+                          <tr class="table-success">
+                            <td>GP0002</td>
                             <td>Maceta Good</td>
-                            <td>23/02/2022</td>
-                            <td>$10.000</td>
-                          </tr>
-                          <tr>
-                            <td>Tierra de hojas</td>
-                            <td>23/02/2022</td>
-                            <td>$5.000</td>
+                            <td>20/02/2022</td>
+                            <td>03/03/2022</td>
+                            <td>$9.500</td>
+                            <td>Entregado</td>
                           </tr>
                         </tbody>
                       </table>
+                        </div>
+                        <div class="col-sm-2"></div>
+                    </div>
                       <div style="text-align: center;">
                         <input type="submit" value="Ver despacho" class="btn btn-success mt-3 mb-3" name="btnEnviar" id="btnEnviar">
                         <input type="reset" value="Cancelar" class="btn btn-danger mt-3 mb-3" name="btnLimpiar" id="btnLimpiar">
@@ -171,54 +180,74 @@
   </div>
         <!-- The Modal -->
 <div class="modal" id="ModalFundacion">
-  <div class="modal-dialog">
-    <div class="modal-content">
-      <!-- Modal Header -->
-      <div class="modal-header">
-        <h4 class="modal-title">Unete a la Fundacion</h4>
-        <button type="button" class="close" data-dismiss="modal">&times;</button>
-      </div>
-      <!-- Modal body -->
-      <div class="modal-body mt-3">
-          <div>
-            <div style="text-align: center;">
-              <img src="img/registroUsuario.png" alt="" width="50">
-              <form action="perfilUsuario.html" method="get">
-            </div>
-                  <div class="form-group">
-                      <label for="txtUser">Nombre</label>
-                      <input type="text" placeholder="Ingrese Nombre" class="form-control" name="txtName" id="txtName">
-                  </div>
-                  <div>
-                    <label for="txtAppaterno">Apellido paterno</label>
-                    <input type="text" placeholder="Ingrese apellido paterno" class="form-control" name="txtAppaterno" id="txtAppaterno">
-                </div>
-                <div>
-                  <label for="txtApmaterno">Apellido materno</label>
-                  <input type="text" placeholder="Ingrese apellido materno" class="form-control" name="txtApmaterno" id="txtApmaterno">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <!-- Modal Header -->
+        <div class="modal-header">
+          <h4 class="modal-title">Unete a la Fundacion</h4>
+          <button type="button" class="close" data-dismiss="modal">&times;</button>
+        </div>
+        <!-- Modal body -->
+        <div class="modal-body mt-3">
+            <div>
+              <div style="text-align: center;">
+                <img src="img/registroUsuario.png" alt="" width="50">
+                <form action="perfilUsuario.html" method="get">
               </div>
-                  <div>
-                      <label for="txtEmail">Correo Electronico</label>
-                      <input type="text" placeholder="Ingresa tu correo" class="form-control" name="txtEmail" id="txtEmail">
+                    <div class="form-group">
+                        <label for="txtUser">Nombre Completo</label>
+                        <input type="text" placeholder="Ingrese Nombre" class="form-control" name="txtName" id="txtName">
+                    </div>
+                    <div class="txtEmail">
+                        <label for="txtEmail">Correo Electronico</label>
+                        <input type="text" placeholder="Ingresa tu correo" class="form-control" name="txtEmail" id="txtEmail">
+                    </div>
+                    <div>
+                      <label for="txtNumcon">Numero Contacto</label>
+                      <input type="text" placeholder="Ingrese numero contacto" class="form-control" name="txtNumcon" id="txtNumcon">
                   </div>
-                  <div>
-                    <label for="txtNumcon">Numero Contacto</label>
-                    <input type="text" placeholder="Ingrese numero contacto" class="form-control" name="txtNumcon" id="txtNumcon">
+                    <div class="tittlePlan mb-3 mt-3">
+                      <h6>Planes de Suscripcion:</h6>
+                  </div>
+                    <div class="checkbox mb-3">
+                      <label for="checkbox">Un mes por $4.000</label>
+                      <input type="checkbox">
+                  </div>
+                  <div class="checkbox mb-3">
+                    <label for="checkbox">6 meses por $20.000</label>
+                    <input type="checkbox">
                 </div>
-                  <div style="text-align: center;">
-                      <input type="submit"  class="btn btn-success mt-3" name="btnEnviar" id="btnEnviar">
-                      <input type="reset" class="btn btn-danger mt-3" name="btnLimpiar" id="btnLimpiar">
+                  <div class="checkbox mb-3">
+                    <label for="checkbox">1 año por $30.000</label>
+                    <input type="checkbox">
+                </div>
+                <div class="payMethod mb-3 mt-3">
+                  <h6>Metodos de pago:</h6>
+                  <div class="dropdown">
+                    <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                      Seleccione...
+                    </button>
+                    <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                      <a class="dropdown-item" href="#">Paypal</a>
+                      <a class="dropdown-item" href="#">WebPay</a>
+                      <a class="dropdown-item" href="#">Targeta Registrada</a>
+                    </div>
                   </div>
-              </form>
-          </div>
-      </div>
-      <!-- Modal footer -->
-      <div class="modal-footer">
-        <button type="button" class="btn btn-danger" data-dismiss="modal">Close</button>
+                </div>
+                    <div style="text-align: center;">
+                        <input type="submit"  class="btn btn-success mt-3" name="btnEnviar" id="btnEnviar">
+                        <input type="reset" class="btn btn-danger mt-3" name="btnLimpiar" id="btnLimpiar">
+                    </div>
+                </form>
+            </div>
+        </div>
+        <!-- Modal footer -->
+        <div class="modal-footer">
+          <button type="button" class="btn btn-danger" data-dismiss="modal">Close</button>
+        </div>
       </div>
     </div>
   </div>
-</div>
 <footer class="bg-dark text-center text-white">
   <!-- Grid container -->
   <div class="container p-4 pb-0">
