--- a/GoodPlant/suscripcion.html
+++ b/GoodPlant/suscripcion.html
@@ -53,23 +53,23 @@
                 </div>
                 <div class="row">
                     <div class="col-sm-12">
-                      <ul class="nav nav-pills flex-column mt-3">
-                        <li class="nav-item mt-1">
-                          <a class="nav-link " href="perfilUsuario.html"> <i class="fa fa-id-badge"></i> Perfil</a>
-                        </li>
-                        <li class="nav-item mt-1">
-                          <a class="nav-link" href="historialCompras.html"><i class="fa fa-clock-rotate-left"></i> Historial Compras</a>
-                        </li>
-                        <li class="nav-item mt-1">
-                          <a class="nav-link" href="suscripcion.html"><i class="fa-brands fa-gratipay"></i> suscripcion</a>
-                        </li>
-                        <li>
-                          <hr>
-                         </li>
-                        <li class="nav-item mt-1">
-                            <a class="nav-link" href="index.html"><i class="fa fa-right-from-bracket"></i> Cerrar Sesión</a>
-                          </li>
-                      </ul>
+                        <ul class="nav nav-pills flex-column mt-3">
+                            <li class="nav-item mt-1">
+                              <a class="nav-link " href="perfilUsuario.html"> <i class="fa fa-id-badge"></i> Perfil</a>
+                            </li>
+                            <li class="nav-item mt-1">
+                              <a class="nav-link" href="historialCompras.html"><i class="fa fa-clock-rotate-left"></i> Historial Compras</a>
+                            </li>
+                            <li class="nav-item mt-1">
+                                <a class="nav-link" href="suscripcion.html"><i class="fa-brands fa-gratipay"></i> suscripcion</a>
+                              </li>
+                            <li>
+                              <hr>
+                             </li>
+                            <li class="nav-item mt-1">
+                                <a class="nav-link" href="index.html"><i class="fa fa-right-from-bracket"></i> Cerrar Sesión</a>
+                              </li>
+                          </ul>
                     </div>
                     </div>
                 </div>
@@ -78,52 +78,46 @@
                     <div class="col-sm-2">
                     </div>
                     <div class="col-sm-8">
-                      <table class="table mt-3">
+                      <table class="table table-bordered mt-3">
                         <thead class="thead-dark">
                           <tr>
-                            <th>Numero De Orden</th>
-                            <th>Producto</th>
-                            <th>Fecha de compra</th>
-                            <th>Monto</th>
-                            <th>Medio de pago</th>
-                            <th>Estado de pago</th>
-                            <th>Despacho</th>
+                            <th>Tipo Suscripcion</th>
+                            <th>Fecha inicio</th>
+                            <th>Fecha termino</th>
+                            <th>Estado</th>
+                            <th>Monto cancelado</th>
                           </tr>
                         </thead>
                         <tbody>
                           <tr class="table-warning">
-                            <td>GP0001</td> 
-                            <td>Pala de jardin</td>
-                            <td>03/03/2022</td>
-                            <td>$9.500</td>
-                            <td>Webpay</td>
-                            <td>En Preparacion</td>
-                            <td><a href="seguimientoDespacho1.html">Ver Despacho</a></td>
+                            <td>Suscripcion 1 mes</td>
+                            <td>21/02/2022</td>
+                            <td>21/03/2022</td>
+                            <td>En curso</td>
+                            <td>$4.000</td>
                           </tr>
                           <tr class="table-success">
-                            <td>GP0002</td>
-                            <td>Tierra de hojas</td>
-                            <td>20/02/2022</td>
-                            <td>$7.600</td>
-                            <td>Targeta registrada</td>
-                            <td>Recibido</td>
-                            <td><a href="seguimientoDespacho2.html">Ver Despacho</a></td>
+                            <td>Suscripcion 1 mes</td>
+                            <td>21/01/2022</td>
+                            <td>21/02/2022</td>
+                            <td>Renovada</td>
+                            <td>$4.000</td>
                           </tr>
                           <tr class="table-success">
-                            <td>GP0003</td>
-                            <td>Maceta Good</td>
-                            <td>20/02/2022</td>
-                            <td>$7.600</td>
-                            <td>Targeta registrada</td>
-                            <td>Recibido</td>
-                            <td><a href="seguimientoDespacho3.html">Ver Despacho</a></td>
+                            <td>Suscripcion 1 mes</td>
+                            <td>21/12/2021</td>
+                            <td>21/01/2022</td>
+                            <td>Renovada</td>
+                            <td>$4.000</td>
                           </tr>
                         </tbody>
                       </table>
                       <div>
-                        <input type="submit"  class="btn btn-success mt-3" name="btnEnviar" id="btnEnviar" value="Verificar">
-                        <input type="reset" class="btn btn-danger mt-3" name="btnLimpiar" id="btnLimpiar" value="Eliminar">
+                        <input type="submit"  class="btn btn-success mt-3" name="btnEnviar" id="btnEnviar" value="Renovar Suscripcion">
+                        <input type="submit"  class="btn btn-success mt-3" name="btnEnviar" id="btnEnviar" value="Cambiar Suscripcion">
+                        <input type="reset" class="btn btn-danger mt-3" name="btnLimpiar" id="btnLimpiar" value="Cancelar Suscripcion">
                     </div>
+            
                     </div>
                     <div class="col-sm-2">
                     </div>
